@@ -25,10 +25,20 @@ Specific Compilation Options
    There is a wide range of compilation options, to fine tune the simulation.
 Check 'configure --help' for specific compilation options.
 
-   Do not hesitate to contact us to solve any doubts regarding the specific
-Dimemas tune.
+   Most common configuration line is:
 
-   Dimemas support e-mail: tools@bsc.es
+   * ./configure --enable-large-traces --with-time-limit=<simulation_limit_in_seconds>
 
-    
-     
+   Other useful options are:
+
+   * --enable-debug: to produce a more accurate description of the simulation
+
+   * --enable-optimization: to compile the simulator with higher compiler
+     optimization.
+
+   Rest of the options usually regard to very specific simulation facts.Do not
+hesitate to contact us to solve any doubts regarding the specific Dimemas 
+tune.
+
+   Dimemas contact e-mail: tools@bsc.es
+
